# XFix

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/openxu/xfix/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/openxu/xfix/: BugActivity.kt  MainActivity.kt  Util.kt
app/src/main/java/com/openxu/xfix/util/permission/: PermissionCallBack.java  PermissionUtil.java
app/src/main/res/layout/: activity_bug.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/openxu/xfix/: ExampleUnitTest.kt
buildSrc/: build.gradle
buildSrc/src/main/groovy/com/openxu/fixpatch/: XFix.groovy  XFixPatchPlugin.groovy
buildSrc/src/main/groovy/com/openxu/fixpatch/autopatch/: Config.groovy  ReflectUtils.groovy
fix-libs/: CMakeLists.txt  build.gradle
fix-libs/src/main/: AndroidManifest.xml
fix-libs/src/main/cpp/: fix_method.h  method_replace.cpp
fix-libs/src/main/java/com/openxu/fixlibs/: MethodReplace.java  NativeMethodFixMng.java  NativeStructsMode.java
gradle/wrapper/: gradle-wrapper.properties
